<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.namaltechnologysolutions.bunny.bookbank.Fragment.Login_Fragment">

    <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_app"
            android:layout_gravity="center"
            android:layout_marginTop="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Book_Bank"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/skyColor"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_your_unwanted_books_and_help_to_fight_poverty"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">
            <ImageView
                android:background="@color/white"
                android:id="@+id/diller_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_post_a_request_1"
                android:padding="8dp"
                android:contentDescription="@string/email_icon" />
            <EditText
                android:id="@+id/siginEmailAdress"
                android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="match_parent"
                android:hint="@string/email_address"
                android:gravity="center"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/lock_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_lock"
                android:background="@color/white"
                android:padding="3dp"
                android:contentDescription="@string/lock_icon" />
                <EditText
                    android:id="@+id/siginPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <CheckBox
                android:id="@+id/rememberMeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/skyColor"/>

        </LinearLayout>
        <Button
            android:id="@+id/signIn"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/Sign_in"
            android:textColor="@color/white"
            android:background="@color/skyColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/Have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/don_t_have_an_account"
                android:gravity="center" />
            <TextView
                android:id="@+id/Sign_Up"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Sign_up"
                android:gravity="center"
                android:textColor="@color/skyColor" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>