<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.namaltechnologysolutions.bunny.bookbank.Fragment.Sign_Up_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_app"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Book_Bank"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/skyColor"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_your_unwanted_books_and_help_to_fight_poverty"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:orientation="vertical"
    android:layout_marginTop="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_user_icon_1"
            android:background="@color/white"
            android:padding="8dp"
            android:contentDescription="@string/user_icon" />

        <EditText
            android:id="@+id/signUpName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:gravity="center"
            android:hint="@string/Name"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/diller_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_post_a_request_1"
            android:background="@color/white"
            android:padding="8dp"
            android:contentDescription="@string/diller_icon" />
        <EditText
            android:id="@+id/signupEmailAdress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:hint="@string/email_address"
            android:gravity="center"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/lock_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_lock"
        android:background="@color/white"
        android:padding="8dp"
        android:contentDescription="@string/lock_icon" />
    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:hint="@string/Password"
        android:gravity="center"
        android:inputType="textPassword"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/renter_lock_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_lock"
        android:background="@color/white"
        android:padding="8dp"
        android:contentDescription="@string/lock_icon" />
    <EditText
        android:id="@+id/signUpConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:hint="@string/Confirm_password"
        android:gravity="center"
        android:inputType="textPassword"/>
</LinearLayout>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="If your city is not listed,please select 'Other' and mention your city in post request description."
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_location_2"
            android:background="@color/white"
            android:padding="8dp"
            android:contentDescription="@string/lock_icon" />
        <!--<EditText-->
            <!--android:id="@+id/signUpSeclectCity"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/gray"-->
            <!--android:hint="@string/Select_city"-->
            <!--android:layout_weight="2"-->
            <!--android:gravity="center"-->
            <!--/>-->
        <Spinner
            android:id="@+id/signUpCitySpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown"
            android:popupBackground="@color/gray">
        </Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@color/skyColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center">
        <TextView
            android:id="@+id/Have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/have_an_account"
            android:textSize="18sp"
             />
        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/sign_in"
            android:textColor="@color/skyColor" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>
</ScrollView>